--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,10 +7,10 @@ bg_white{
     background-color: white;
     font-size: small;
 }
-bordes_p{
-    border-top: 5cm;
-    border-bottom: 5cm;
-}
+bordes{
+    border-top: #7aba96 1px;
+    border-bottom:#7aba96 1px;
+    }
 html {
     min-height: 100%;
     position: relative;
