--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,7 +7,7 @@ bg_white{
     background-color: white;
     font-size: small;
 }
-bordes{
+.bordes {
     border-top: #7aba96 1px;
     border-bottom:#7aba96 1px;
     }
@@ -34,8 +34,14 @@ html {
     align-items: center;
   }
 
-  .colum {
+  .columna {
     margin: 10px;
     padding: 10px;
   }
-  
+
+  .text {
+    font-size: 12px;
+    font-family: Verdana;
+    text-align: center;
+
+  }
