--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,9 +7,13 @@ bg_white{
     background-color: white;
     font-size: small;
 }
-.bordes {
+.bordes_verdes {
+  border-style: solid;
     border-color: #22cf6d;
-    border-width: 5px;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 0px;
+    border-right-width: 0px;
     }
 html {
     min-height: 100%;
@@ -45,12 +49,44 @@ footer {
 .columna{
 
   float: left;
-  width: 33.33%;
+  width: 30%;
+  margin: 10px;
+
+}
+
+.columna1{
+
+  float: left;
+  width: 20%;
+  margin: 100px;
 
 }
 
 .muestra{
 
-  position: static;
+  border-left: 100px;
+  border-right: 100px;
+  text-align: center;
 
+}
+.fondo_gris{
+
+  background-color: lightgrey;
+
+}
+
+.fondo_verde{
+
+  background-color: lightgreen;
+
+}
+
+.comentario{
+
+  padding-right: 70px;
+
+}
+.exp{
+  font-family: Arial;
+  font-size: small;
 }
