--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,7 +9,7 @@ bg_white{
 }
 .bordes_verdes {
   border-style: solid;
-    border-color: #22cf6d;
+    border-color: #7ABA96;
     border-top-width: 1px;
     border-bottom-width: 1px;
     border-left-width: 0px;
@@ -77,7 +77,7 @@ footer {
 
 .fondo_verde{
 
-  background-color: lightgreen;
+  background-color: #7ABA96;
 
 }
 
