--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,9 +3,14 @@ bg_black{
     font-size: small;
 
 }
-bg_white{
+.nav_head{
     background-color: white;
     font-size: small;
+    border-color: black;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 0px;
+    border-right-width: 0px;
 }
 .bordes_verdes {
   border-style: solid;
