--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,7 +5,7 @@ bg_black{
 }
 .nav_head{
     background-color: white;
-    font-size: small;
+    border-style: solid;
     border-color: black;
     border-top-width: 1px;
     border-bottom-width: 1px;
@@ -35,7 +35,11 @@ footer {
   width: 100%;
   height: 40px;
   color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  text-align: center;
 }
+
 
 .fila {
   display: flex;
