--- a/lista/style.css
+++ b/lista/style.css
@@ -1,3 +1,11 @@
 /* Estilos generales */
-
+.Rpastas {
+align-items: center;
+text-align: center;
+align-content: center;
+}
+.enlaces {
+    color: green;
+    font-weight: bold;
+}
 /* Estilos para las recetas */
