--- a/css/estiloRecetas.css
+++ b/css/estiloRecetas.css
@@ -63,7 +63,7 @@ align-content: center;
   border-right-width: 0px;
   border-left-width: 0px;
   border-style: solid;
-  font-size: medium;
+  font-size: large;
   font-weight: bold;
   color: black;
 }
