--- a/pt1-floresantonio-fernandezarnau-asixc1b/style.css
+++ b/pt1-floresantonio-fernandezarnau-asixc1b/style.css
@@ -1,5 +1,19 @@
-@import url(//db.onlinewebfonts.com/c/84cb021d5f9af287ffff84b61beef6dc?family=clockicons);
-h1 { 
-font-family: 'clockicons', sans-serif; 
-color: blue; CSS
-}
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+  }
+  
+  #rouletteCanvas {
+  }
+  
+  button {
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+  }
