--- a/pt1-floresantonio-fernandezarnau-asixc1b/style.css
+++ b/pt1-floresantonio-fernandezarnau-asixc1b/style.css
@@ -1,19 +1,58 @@
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
-  }
-  
-  #rouletteCanvas {
-  }
-  
-  button {
-    margin-top: 1rem;
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    cursor: pointer;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f0f0f0;
+}  
+#spinButton {
+  position: center;
+  margin-top: 1rem;
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5rem;
+  box-shadow: 10px 5px 5px black;
+}
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+.toggle-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: grey;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+h2 {
+  color: #0077c2;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
+#rouletteCanvas {
+}
+.container {
+  text-align: center;
+  margin-top: 0.1rem;
+}
+.button-container {
+  margin-top: 10px;
+  background-color: #0077c2;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.alarm {
+  position: pointer;
+  top: 25px;
+  right: 25px;
+}
